fix: Adds missing entrypoint in deployment.md
Adds an entrypoint to declare that we are going to use the local profile